# Study

./: .gitignore  test.py
3DGameEngineProgramming/: note.md
3DGameEngineProgramming/LearnDX12-Lesson1/: Helpers.h  main.cpp
3DGameEngineProgramming/LearnDX12-Lesson2/: Application.cpp  Application.h  CommandQueue.cpp  CommandQueue.h  Cube.cpp  Cube.h  Events.h  Framework.srctrldb  Framework.srctrlprj  Game.cpp  Game.h  HighResolutionClock.cpp  HighResolutionClock.h  KeyCodes.h  PixelShader.hlsl  VertexShader.hlsl  Window.cpp  Window.h  main.cpp  pch.h
Blender/: girl01.blend  girl01.blend1
C++CoreGuidelines/第六章/: test.cpp
C++CoreGuidelines/第十五章/: test.cpp
C++CoreGuidelines/第十八章/: test.cpp
C++CoreGuidelines/第十四章/: test.c  test.cpp
C++Templates/第九章/: test.cpp
C++Templates/第十章/: test.cpp
C++primer/第七章/: Sales_data.cpp  Sales_data.h  Screen.cpp  Screen.h  Window_mgr.cpp  Window_mgr.h  test.cpp
C++primer/第十二章/: StrBlob.cpp  StrBlob.h  StrBlobPtr.cpp  StrBlobPtr.h  test.cpp
C++并发编程实战/第五章/: fence.cpp  memory_model.cpp  memory_order_acq_rel.cpp  memory_order_consume.cpp  memory_order_relaxed.cpp  memory_order_seq_cst.cpp  spinlock.cpp
C++并发编程实战/第六章/: queue_atomic.cpp  queue_lock.cpp  threadsafe_list.cpp  threadsafe_lookup_table.cpp  threadsafe_queue.cpp  threadsafe_stack.cpp
C++并发编程实战/第四章/: async.cpp  async_function.cpp  condition_variable.cpp  csp.cpp  test_thread_pool.cpp  thread_pool.h  threadsafe_queue.cpp
C++并发编程实战/第四章/atm/: CMakeLists.txt  actor.cpp  atm.h  bank_machine.h  dispatcher.h  interface_machine.h  message.h  withdraw_msg.h
D3D12/1-D3D12Triangle/: main.cpp
D3D12/1.6/: main.cpp
D3D12/2-D3D12WICTexture/: main.cpp
D3D12/2.8/: main.cpp
D3D12/3-PlacedTexture/: main.cpp
D3D12/4/: InitDirect3DApp.cpp  main.cpp
D3D12/4-D3D12TextureCube/: main.cpp
D3D12/5-skyBox/: main.cpp
D3D12/CheckGPU/: main.cpp
D3D12/Common/: GameTimer.cpp  GameTimer.h  d3dApp.cpp  d3dApp.h
DeepLearning/: DL.ipynb  pytorch.ipynb
EffectiveModernC++/: item1.cpp
EffectiveModernC++/第一章/: item10.cpp  item11.cpp  item12.cpp  item13.cpp  item14.cpp  item15.cpp  item16.cpp  item17.cpp  item2.cpp  item3.cpp  item4.cpp  item5.cpp  item6.cpp  item7.cpp  item8.cpp  item9.cpp
EffectiveModernC++/第五章/: item23.cpp  item24.cpp  item25.cpp  item26.cpp  item27.cpp  item28.cpp  item29.cpp  item30.cpp
EffectiveModernC++/第八章/: item41.cpp  item42.cpp
EffectiveModernC++/第六章/: item31.cpp  item32.cpp  item33.cpp  item34.cpp
EffectiveModernC++/第四章/: item18.cpp  item19.cpp  item20.cpp  item21.cpp  item22.cpp  item22.h
EngineStudy/: xmake.lua
EngineStudy/shaders/: light.vs  light_cube.vs  lighting_map.vs
EngineStudy/src/: test.py
GameEngineBook/12/SplitEngineAsFramework/: CMakeLists.txt
GameEngineBook/12/SplitEngineAsFramework/example/: LoginScene.cpp  LoginScene.h  main.cpp
GameEngineBook/12/SplitEngineAsFramework/source/component/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
GameEngineBook/12/SplitEngineAsFramework/source/renderer/: MeshRenderer.cpp  Shader.h  texture2d.h
GameEngineBook/12/SplitEngineAsFramework/source/utils/: Application.cpp  Application.h
GameEngineBook/2/Window/: CMakeLists.txt  main.cpp
GameEngineBook/3/DrawTriangle/: CMakeLists.txt  ShaderSource.h  VertexData.h  main.cpp
GameEngineBook/7/EmportMeshFile/: CMakeLists.txt  VertexData.h  main.cpp
GameEngineBook/7/LoadMeshFile/: CMakeLists.txt  ShaderSource.h  main.cpp
GameEngineBook/7/UseMaterial/: CMakeLists.txt
GameEngineBook/7/UseMaterial/source/: main.cpp
GameEngineBook/7/UseMaterial/source/renderer/: MeshFilter.cpp  texture2d.cpp  texture2d.h
GameEngineBook/7/UseShaderFile/: CMakeLists.txt  main.cpp
GameEngineBook/7/UseShaderFile/renderer/: MeshFilter.cpp  MeshFilter.h  Shader.cpp
GameEngineBook/9/GameObjectComponent/: CMakeLists.txt
GameEngineBook/9/GameObjectComponent/source/: main.cpp
GameEngineBook/9/GameObjectComponent/source/component/: GameObject.h
GameEngineBook/9/GameObjectComponent/source/renderer/: MeshFilter.cpp  MeshRenderer.cpp
GameEngineBook/9/GameObjectComponent/source/utils/: Application.h
GameEngineBook/9/TestRTTR/: CMakeLists.txt  main.cpp
GameProgrammingPatterns/: command.cpp  flyweight.cpp  note.md  observer.cpp
ModernCppPractice/: TemplateAndModerncpp.cpp
ModernCppPractice/Log/: Log.cpp  Log.hpp  test.cpp
ModernCppPractice/Random/: random.cpp
MySQL必知必会/: MySQLstudy.md  book.sql
Qt6/: Qtstudy.md
Qt6/Samples/Chap02_basics/samp2_4/: CMakeLists.txt  dialog.h  dialog.ui
TinyRenderer/: .gitignore  math.md  note.md  xmake.lua
TinyRenderer/src/: common.hpp  geometry.hpp  main.cpp  model.hpp  my_gl.hpp  shader.hpp  tgaimage.cpp  tgaimage.h
learnOpenGL/: .gitignore  xmake.lua
learnOpenGL/shaders/: color.fs  light.fs  light.vs  lighting_map.fs  phong.fs  phong.vs  test.fs  test.vs
learnOpenGL/src/: application.cpp  application.h  camera.cpp  camera.cppm  log_system.cpp  log_system.cppm  main.cpp  screen.cppm  shader.cpp  shader.cppm  shader.h
现代C++核心特性解析/: 12.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.1.cpp  20.cpp  21.cpp  24.cpp  25.cpp  27.cpp  28.cpp  29.cpp  3.cpp  30.cpp  31.cpp  32.cpp  4.cpp  9.cpp  stl.cpp
现代C++核心特性解析/第一章/: 1.1.cpp  1.2.cpp
现代C++核心特性解析/第七章/: 7.cpp
现代C++核心特性解析/第五章/: 5.cpp
现代C++核心特性解析/第八章/: 8.cpp
现代C++核心特性解析/第六章/: 6.cpp
现代C++核心特性解析/第十三章/: 13.cpp
现代C++核心特性解析/第十章/: 10.cpp
设计模式/: note.md
设计模式/AbstractFactory/: Cheese.hpp  ChicagoPizzaIngredientFactory.hpp  ChicagoPizzaStore.hpp  ChicagoStylePizza.hpp  Clams.hpp  Dough.hpp  FreshClams.hpp  FrozenClams.hpp  MarinaraSauce.hpp  MozzarellaCheese.hpp  NYPizzaIngredientFactory.hpp  NYPizzaStore.hpp  NYStylePizza.hpp  Pizza.hpp  PizzaIngredientFactory.hpp  PizzaStore.hpp  PlumTomatoSauce.hpp  ReggianoCheese.hpp  Sauce.hpp  ThickCrustDough.hpp  ThinCrustDough.hpp  main.cpp
设计模式/Bridge/: ConcreteRemote.hpp  RCA.hpp  RemoteControl.hpp  Sony.hpp  TV.hpp  main.cpp
设计模式/Builder/: MeatPizzaBuilder.hpp  Pizza.hpp  PizzaBuilder.hpp  PizzaDirector.hpp  VeggiePizzaBuilder.hpp  main.cpp
设计模式/Decorator/: Beverage.hpp  Decaf.hpp  (+9 more)
(+809 files in other folders)
